<resources>

    <string name="all_appName">Tabata timer</string>
    <string name="all_headerPlaceholder">A header!</string>
    <string name="all_descriptionPlaceholder">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et
        dolore magna aliqua.
    </string>
    <string name="all_timePlaceholder">01:30</string>
    <string name="all_timeLeftPlaceholder">-00:17</string>
    <string name="all_totalTimePlaceholder">Total time: %s</string>
    <string name="all_stagesAmountPlaceholder">Stages amount: %s</string>
    <string name="all_navigationMenuHeaderTitle" translatable="false">Current sequence</string>
    <string name="all_navigationMenuHeaderStage" translatable="false">Stage:</string>
    <string name="all_navigationMenuHeaderStatus" translatable="false">Status:</string>

    <string name="label_sequence">Sequence</string>
    <string name="label_library">Library</string>
    <string name="label_settings">Settings</string>
    <string name="label_empty" />

    <string name="menu_actionSettings">Settings</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>

    <string name="sequence_btnPlayDescription">Play</string>
    <string name="sequence_btnFastForwardDescription">Fast forward</string>
    <string name="sequence_btnFastRewindDescription">Fast rewind</string>

    <string name="sequenceStage_duration">Duration:</string>

    <string name="sequenceStageAdd_name">Name:</string>
    <string name="sequenceStageAdd_description">Description:</string>
    <string name="sequenceStageAdd_colour" translatable="false">Tap here to choose colour</string>
    <string name="sequenceStageEdit_rename">Rename:</string>
    <string name="sequenceStageEdit_changeDescription">Change description:</string>
    <string name="sequenceStageEdit_alterTimer">Alter timer:</string>
    <string name="sequenceStageEdit_headerPlaceholder">Header…</string>
    <string name="sequenceStageEdit_descriptionPlaceholder">Description…</string>
    <string name="sequenceStageEdit_timePlaceholder">00</string>
    <string name="sequenceStageEdit_colon">:</string>

    <string name="library_colour">Sequence colour</string>

    <string name="loading_title">Loading</string>
    <string name="loading_letter_L">L</string>
    <string name="loading_letter_O">O</string>
    <string name="loading_letter_A">A</string>
    <string name="loading_letter_D">D</string>
    <string name="loading_letter_I">I</string>
    <string name="loading_letter_N">N</string>
    <string name="loading_letter_G">G</string>
    <string name="loading_dot">.</string>

    <string name="preferences_fontSize">Font size</string>
    <string name="preferences_setsFontSize">Select font size</string>
    <string name="preferences_selectLanguage">Select language</string>
    <string name="preferences_appLanguage">App language</string>
    <string name="preferences_language">Language</string>
    <string name="preferences_darkTheme">Dark theme</string>
    <string name="preferences_turnOn">Turn on</string>
    <string name="preferences_turnOff">Turn off</string>
    <string name="preferences_delete">Delete</string>
    <string name="preferences_deleteAll">Delete all</string>

    <string-array name="preferences_languageArray">
        <item>Russian</item>
        <item>English</item>
    </string-array>

    <string-array name="preferences_languageAliasArray">
        <item>ru</item>
        <item>en</item>
    </string-array>

    <string-array name="preferences_textScaleArray">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="preferences_textScaleAliasArray">
        <item>0.85</item>
        <item>1.0</item>
        <item>1.15</item>
    </string-array>

</resources>
