<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   style="@style/TabataTimer.Item.SequenceStageEdit.Card">

    <LinearLayout
        android:id="@+id/linearLayout_sequenceStageEdit_background"
        style="@style/TabataTimer.Item.SequenceStageEdit.Container">

        <!-- Header -->
        <TextView
            style="@style/TabataTimer.Item.SequenceStageEdit.Content.Text.Header"
            android:text="@string/sequenceStageAdd_name" />

        <EditText
            android:id="@+id/editText_sequenceStageEdit_header"
            style="@style/TabataTimer.Item.SequenceStageEdit.Content.EditText.Text.Header"
            android:autofillHints=""
            android:hint="@string/sequenceStageEdit_headerPlaceholder" />

        <View style="@style/TabataTimer.Item.SequenceStageEdit.Content.Separator" />

        <!-- Description -->
        <TextView
            style="@style/TabataTimer.Item.SequenceStageEdit.Content.Text.Header"
            android:text="@string/sequenceStageAdd_description" />

        <EditText
            android:id="@+id/editText_sequenceStageEdit_description"
            style="@style/TabataTimer.Item.SequenceStageEdit.Content.EditText.Text.Description"
            android:autofillHints=""
            android:hint="@string/sequenceStageEdit_descriptionPlaceholder" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colour_black"
            android:padding="3dp">

            <FrameLayout
                android:id="@+id/frameLayout_sequence_colourPicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colour_strokeDefault" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sequenceStageAdd_colour"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout style="@style/TabataTimer.Item.SequenceStageEdit.Content.ActionButtons.Bar">

            <TextView
                android:id="@+id/textView_sequenceStageEdit_buttonOk"
                style="@style/TabataTimer.Item.SequenceStageEdit.Content.ActionButtons.Button.Ok"
                android:text="@string/button_ok" />

            <TextView
                android:id="@+id/textView_sequenceStageEdit_buttonCancel"
                style="@style/TabataTimer.Item.SequenceStageEdit.Content.ActionButtons.Button.Cancel"
                android:text="@string/button_cancel" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
